tests/ui/or-patterns/or-patterns-syntactic-fail.stderr
error: path separator must be a double colon
  --> $DIR/or-patterns-syntactic-fail.rs:11:19
   |
LL |     let _ = |A | B: E| ();
   |                   ^ help: use a double colon instead: `::`
   |
   = note: type ascription syntax has been removed, see issue #101728 <https://github.com/rust-lang/rust/issues/101728>

error: top-level or-patterns are not allowed in function parameters
  --> $DIR/or-patterns-syntactic-fail.rs:16:13
   |
LL |     fn fun1(A | B: E) {}
   |             ^^^^^ help: wrap the pattern in parentheses: `(A | B)`

error: top-level or-patterns are not allowed in function parameters
  --> $DIR/or-patterns-syntactic-fail.rs:19:13
   |
LL |     fn fun2(| A | B: E) {}
   |             ^^^^^^^ help: wrap the pattern in parentheses: `(A | B)`

error: top-level or-patterns are not allowed in `let` bindings
  --> $DIR/or-patterns-syntactic-fail.rs:24:9
   |
LL |     let A | B: E = A;
   |         ^^^^^ help: wrap the pattern in parentheses: `(A | B)`

error: top-level or-patterns are not allowed in `let` bindings
  --> $DIR/or-patterns-syntactic-fail.rs:27:9
   |
LL |     let | A | B: E = A;
   |         ^^^^^^^ help: wrap the pattern in parentheses: `(A | B)`

error[E0433]: failed to resolve: `B` is a variant, not a module
  --> $DIR/or-patterns-syntactic-fail.rs:11:18
   |
LL |     let _ = |A | B: E| ();
   |                  ^ `B` is a variant, not a module
   |
help: there is an enum variant `E::B`; try using the variant's enum
   |
LL |     let _ = |A | E| ();
   |                  ~
help: an enum with a similar name exists
   |
LL |     let _ = |A | E: E| ();
   |                  ~

error: aborting due to 6 previous errors

For more information about this error, try `rustc --explain E0433`.
